# takehome-rl-arch-eval

./: .gitignore  2048.py  README.md  README_orig.md  codex_runner.py  evaluate_many_models.py  evaluate_model.py  generate_evaluation_charts.py  generate_rubric_charts.py  multi_train_launcher.py  prompt_builder.py  pyproject.toml  requirements.txt  score_codex_runs.py  train_24.py  training.py
charts/: eval_model_summary.csv  rubric_scores_model_summary.csv
codex_runs/: 24_output.txt  24_prompt.txt
codex_runs/24/20250920_183935/: env.py  prompt.txt  rollout.py  stdout.txt
codex_runs/24/gpt-4o/20250920_234523/: stdout.txt
codex_runs/24/gpt-4o/20250921_030038/: env.py  evaluation_report.json  prompt.txt  rollout.py  rubric_score.json  rubric_score_raw.txt  stdout.txt
codex_runs/json_extraction/20250920_190910/: env.py  prompt.txt  rollout.py  stdout.txt
codex_runs/typo_correction/20250920_192519/: env.py  prompt.txt  rollout.py  stdout.txt
codex_runs/typo_correction/20250920_195643/: env.py  prompt.txt  rollout.py  stdout.txt
twenty_four_art/: __init__.py  config.py  env.py  evaluation.py  rollout.py  training.py
user_prompts/: 24.txt  24.txt_rubric  json_extraction.txt  json_extraction.txt_rubric  malicious_code_detection.txt  malicious_code_detection.txt_rubric  python_function_generator.txt  python_function_generator.txt_rubric  recipe_scaling.txt  recipe_scaling.txt_rubric  tic_tac_toe.txt  tic_tac_toe.txt_rubric  typo_correction.txt  typo_correction.txt_rubric  word_count_story.txt  word_count_story.txt_rubric
(+187 files in other folders)
